--- a/week12/ex12.A/styles.css
+++ b/week12/ex12.A/styles.css
@@ -1,35 +1,29 @@
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #dcdcdc; 
+}
 
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #d2faa5;
-      margin: 0;
-      padding: 0;
-    }
+#canvas-container {
+  position: relative;
+  overflow: hidden; 
+}
 
-    h1 {
-      margin-top: 50px;
-      color: #333;
-    }
+.key {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #dedede; 
+  border: 5px solid #ccc; 
+  cursor: pointer;
+  transition: background-color 0.3s ease; 
+}
 
-    .keyboard {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-    .key {
-      padding: 100px 20px;
-      margin: 10px;
-      border: 2px solid #333;
-      background-color: #fff;
-      color: #333;
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-      outline: none;
-    }
-    
-    .key:hover {
-      background-color: #c8c8c8;
-    }
+.active {
+  background-color: #bf4848; 
+}
